--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-woot
+This is an early release of the web based DocHive for NICAR 2014. We hope you like it. This preview version is still a bit rough around the edges and a little buggy. Documentation and new optimized releases will be coming soon.
+
